src/compiler/z42.Tests/Fixtures/errors/generic_non_subclass/source.z42
namespace Demo;

class Animal { }
class Vehicle { }

class Box<T> where T: Animal {
    T item;
    Box(T x) { this.item = x; }
}

void Main() {
    var b = new Box<Vehicle>(new Vehicle());
}
